# Celervo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp
.github/: README.md
.github/workflows/: build.yml
include/net/: Buffer.h  InetSocketAddress.h  TCPServer.h
include/util/: UUID.h
src/: main.rs  packets.rs  server.rs  utility.rs
src/net/: Buffer.cpp  InetSocketAddress.cpp  TCPServer.cpp
src/packets/incoming/: handshake_packet.rs  mod.rs  ping_request_packet.rs  status_request_packet.rs
src/packets/outgoing/: mod.rs  pong_response_packet.rs  status_response_packet.rs
src/util/: UUID.cpp
